Sat Sep 01 06:49:49 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: Init modules passed to gnome_program_init on
	  the second (non-global) invocation as well.  Found out bonobo is
	  calling this and that's very wrong BTW.  gnome_program_init should
	  be only called by the program itself in it's main.  Also don't
	  load shlib modules if we're setgid or setuid.  Take the
	  "--load-modules modules" form of argument.  Use the type in the
	  init to create the program.

Sat Sep 01 02:40:35 2001  George Lebl <jirka@5z.com>

	* gnome-config.c: kill weird include for strndup, this is in glib
	  now

Thu Aug 30 19:04:25 2001  George Lebl <jirka@5z.com>

	* gnome-util.c: if looking for a shell in the fallback code,
	  look for shells in /usr/bin as well as that's used on solaris

Thu Aug 30 14:15:44 2001  George Lebl <jirka@5z.com>

	* gnome-gconf.h:  Eeek, we were including gconf-client, we don't
	  want to do that.

Wed Aug 29 01:24:33 2001  George Lebl <jirka@5z.com>

	* gnome-program.[ch]: ifdef out the help functions, that's a better
	  indication that these are here just for show for now.  A proposal
	  of sorts.

Tue Aug 28 23:40:23 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: app prefix defaults to NULL, which will cause
	  a g_warning (maybe should be g_error) when locate_file is used
	  for an app relative domain.  Also don't search the path for
	  app relative files.

	* gnome-program.[ch]:  Add a proposal of functions implementation
	  for displaying app and system help.  This is not part of the
	  API people should use.  It's just for people to leer at for
	  now.

Tue Aug 28 22:45:44 2001  George Lebl <jirka@5z.com>

	* gnome-program.[ch]: To make help file (and other files) location
	  possible add distinction for app and gnome specific files.  Also
	  add a macro that will set the standard directory properties more
	  simply.

	* gnome-init.c: translate module names

Tue Aug 28 01:49:27 2001  George Lebl <jirka@5z.com>
